<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">reader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_setting">Setting</string>
    <string name="action_select">Select</string>
    <string name="action_search">Search</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="darkblue">Darkblue</string>
    <string name="green">Green</string>
    <string name="lightgreen">Lightgreen</string>
    <string name="orange">Orange</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="spin_prompt">choose a background</string>
    <string name="scan">Scan</string>
    <string name="directory">Directory</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="aboutTitle">About this Reader</string>
    <string name="aboutInfo">show me your money!</string>
    <string name="aboutOK">OK</string>

</resources>
