<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.reader.ReaderActivity" >
            
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/image_view"
        android:scaleType="fitCenter"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/action_setting" />

    <Button
        android:id="@+id/black"
        android:layout_width="wrap_content"
        android:width="150dp"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/image_view"
        android:text="@string/black" />

    <Button
        android:id="@+id/blue"
        android:layout_width="wrap_content"
        android:width="150dp"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/black"
        android:text="@string/blue" />

    <Button
        android:id="@+id/darkblue"
        android:layout_width="wrap_content"
        android:width="150dp"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/blue"
        android:text="@string/darkblue" />

    <Button
        android:id="@+id/green"
        android:layout_width="wrap_content"
        android:width="150dp"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/darkblue"
        android:text="@string/green" />

    <Button
        android:id="@+id/lightgreen"
        android:layout_width="wrap_content"
        android:width="150dp"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/green"
        android:text="@string/lightgreen" />

    <Button
        android:id="@+id/orange"
        android:layout_width="wrap_content"
        android:width="150dp"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lightgreen"
        android:text="@string/orange" />

    <Button
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:width="150dp"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/orange"
        android:text="@string/red" />

    <Button
        android:id="@+id/white"
        android:layout_width="wrap_content"
        android:width="150dp"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/red"
        android:text="@string/white" />
    
    <Button
        android:id="@+id/yellow"
        android:layout_width="wrap_content"
        android:width="150dp"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/white"
        android:text="@string/yellow" />

    <Spinner
        android:id="@+id/spinner1"
		android:layout_width = "160px" 
		android:layout_height = "40px"
		android:prompt = "@string/spin_prompt"          
        android:layout_alignTop="@+id/image_view"
        android:layout_toRightOf="@+id/image_view" />

</RelativeLayout>
